--- a/calculatrcie_backend-1.0-SNAPSHOT/pom.xml
+++ b/calculatrcie_backend-1.0-SNAPSHOT/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>calculatrcie_backend-1.0-SNAPSHOT</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>calculatrcie_backend-1.0-SNAPSHOT-1.0-SNAPSHOT</name>
+    <name>calculatrcie_backend-1.0-SNAPSHOT</name>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
