--- a/calculatrice_backend-1.0-SNAPSHOT/pom.xml
+++ b/calculatrice_backend-1.0-SNAPSHOT/pom.xml
@@ -5,11 +5,11 @@
     <artifactId>calculatrcie_backend-1.0-SNAPSHOT</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>calculatrcie_backend-1.0-SNAPSHOT</name>
+    <name>calculatrice_backend-1.0-SNAPSHOT</name>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jakartaee>10.0.0</jakartaee>
+        <jakartaee>8.0.0</jakartaee>
     </properties>
     
     <dependencies>
@@ -28,8 +28,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
